[package]
name = "turbo-leader"
version = "0.1.0"
edition = "2021"

[dependencies]
turbo-common = { path = "../common" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.24", features = ["json"] }
futures-util = "0.3.31"
