[package]
name = "turbo-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
turbo-common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bollard = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
axum = "0.8.7"
futures-util = "0.3.31"
tar = "0.4.44"
socket2 = "0.5"
