[package]
name = "turbo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parameterized-macro = "1.0"
colored = "2.0"
semver = "1.0"
turbo-pkg = { path = "../../crates/turbo-pkg" }
turbo-core = { path = "../../crates/turbo-core" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
