[package]
name = "turbo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
turbo-core = { path = "../../crates/turbo-core" }
turbo-db = { path = "../../crates/turbo-db" }
turbo-box = { path = "../../crates/turbo-box" }
anyhow = "1.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
turbo-pkg = { version = "0.1.0", path = "../../crates/turbo-pkg" }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
colored = "3.0.0"
reqwest = { version = "0.11", features = ["json"] }
