[package]
name = "turbo-pkg"
version = "0.1.0"
edition = "2021"

[dependencies]
turbo-core = { path = "../turbo-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
flate2 = "1.0"
tar = "0.4"
serde_yaml = "0.9"
anyhow = "1.0"
semver = "1.0"
